syntax = "proto3";

option java_package = "org.demo.server";
option java_multiple_files = true;
option java_outer_classname = "SocialMediaStreamServiceProto";

message Recording {
  bytes data = 1;
}

message VideoFrame {
  bytes frame_data = 1;
}

message AudioChunk {
  bytes audio_data = 1;
}

message StreamUpdate {
  VideoFrame video_frame = 1;
  AudioChunk audio_chunk = 2;
}

message WatchStreamRequest {
  string provider_name = 1;
  string quality = 2;
}

message StartStreamResponse {
  string message = 1;
}

message InteractStreamUpdate {
  string provider_name = 1;
  VideoFrame video_frame = 2;
  AudioChunk audio_chunk = 3;
}

service SocialMediaStreamService {
  //unary request-response
  rpc downloadStream (WatchStreamRequest) returns (Recording);
  // server stream
  rpc watchStream (WatchStreamRequest) returns (stream StreamUpdate);
  // client stream
  rpc startStream (stream StreamUpdate) returns (StartStreamResponse);
  // bidirectional
  rpc joinInteractStream (stream InteractStreamUpdate) returns (stream InteractStreamUpdate);
}